# SuperSwiftSites

./: .gitignore  .watchexec-ignore  Cargo.toml  README.md
sample/: .gitignore  base.css  base.html  main.html  navigation.html  site.css  site.toml  typography.css
sample/content/: article-1.html  article-2.html  article-3.html
sample/media/: sources.md
sample/pages/: index.html  page1.html  page2.html  page3.html  subgroup.html
sample/pages/subgroup/: subpage-1.html  subpage-2.html  subpage-3.html
scripts/: compile-sample-site.sh  install.sh  ssio.sh  start-server.sh  watch-compiler.sh
ssio/: Cargo.toml
ssio/src/: cli.rs  compile.rs  css_process.rs  html.rs  html_parser.rs  html_parser2.rs  html_string.rs  main.rs  manifest.rs  path_utils.rs  process.rs  symlink.rs  template.rs
ssio/src/dependency_tracking/: data.rs  mod.rs  resolve_virtual_paths.rs  virtualize_local_paths.rs
ssio/src/html_pass/: load.rs  postprocess.rs  preprocess.rs
ssio/src/pass/: mod.rs  postprocess.rs  preprocess.rs  resolve_virtual_paths.rs  system.rs
super-swift-compiler/: Cargo.toml
