[package]
name = "ssio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
liquid = "0.26.4"
glob = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
path-clean = "1.0.1"
pathdiff = "0.2.3"
html-escape = "0.2"
toml = "0.8.22"

# —— HTML PARSING —————————————————————————————————————————————————————————————
# html5ever = "0.26"
# markup5ever = "0.10"
# markup5ever_rcdom = "0.2"
tendril = "0.4"
once_cell = "1.19"

html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"

# —— CSS PARSING ——————————————————————————————————————————————————————————————
lightningcss = { version = "1.0.0-alpha.66", features = ['visitor']}

# —— DEBUGGING ————————————————————————————————————————————————————————————————
pretty-tree = { git = "https://github.com/colbyn/pretty-tree-rs.git", rev = "7b75084"}
# pretty-tree = { path = "/Users/colbyn/Developer/Library/pretty-tree-rs"}